Workaround for MDEV-18084, MDEV-18085, MDEV-18086, MDEV-18087, MDEV-18089

Disable virtual columns again